
#libinputsystem_adir = LIS
#libinputsystem_a_include_dir = .
#libinputsystem_a_HEADERS =  InputSystem.h driver/InputDriverEvdev.h driver/InputDriverAbstract.h manager/InputManager.h system/InputSubsystem.h system/InputTypes.h device/InputDeviceMouse.h device/InputDeviceRemoteControl.h device/InputDeviceAbstract.h device/InputDeviceJoystic.h device/InputDeviceKeyboard.h 
#libinputsystem_a_HEADERS = ../include/InputSystem.h ../include/driver/InputDriverEvdev.h ../include/driver/InputDriverAbstract.h ../include/manager/InputManager.h ../include/system/InputSubsystem.h ../include/system/InputTypes.h ../include/device/InputDeviceMouse.h ../include/device/InputDeviceRemoteControl.h ../include/device/InputDeviceAbstract.h ../include/device/InputDeviceJoystic.h ../include/device/InputDeviceKeyboard.h 

#lib_LIBRARIES = libinputsystem.a
#libinputsystem_adir = lis
#libinputsystem_a_HEADERS = InputSystem.h driver/InputDriverEvdev.h driver/InputDriverAbstract.h manager/InputManager.h system/InputSubsystem.h system/InputTypes.h device/InputDeviceMouse.h device InputDeviceRemoteControl.h device/InputDeviceAbstract.h device/InputDeviceJoystic.h device/InputDeviceKeyboard.h 

#nobase_include_HEADERS = InputSystem.h driver/InputDriverEvdev.h driver/InputDriverAbstract.h manager/InputManager.h system/InputSubsystem.h system/InputTypes.h device/InputDeviceMouse.h device InputDeviceRemoteControl.h device/InputDeviceAbstract.h device/InputDeviceJoystic.h device/InputDeviceKeyboard.h 

#include_HEADERS = InputSystem.h driver/InputDriverEvdev.h driver/InputDriverAbstract.h manager/InputManager.h system/InputSubsystem.h system/InputTypes.h device/InputDeviceMouse.h device InputDeviceRemoteControl.h device/InputDeviceAbstract.h device/InputDeviceJoystic.h device/InputDeviceKeyboard.h 

